# thematic-oss

./: .gitignore  ISSUES.md  README.md  pyproject.toml  run_analysis.py
.github/workflows/: ci.yml
src/thematic_analysis/: __init__.py  hitl.py  loaders.py  persona.py  prompts.py  research_context.py
src/thematic_analysis/agents/: __init__.py  aggregator.py  base.py  coder.py  reviewer.py  theme_aggregator.py  theme_coder.py
src/thematic_analysis/codebook/: __init__.py  codebook.py  embeddings.py
src/thematic_analysis/evaluation/: __init__.py  credibility.py  dependability.py  transferability.py
src/thematic_analysis/pipeline/: __init__.py  pipeline.py
src/thematic_lm/: __init__.py  hermeneutics.py  identity.py  iterative.py  persona.py  research_context.py
src/thematic_lm/agents/: __init__.py  aggregator.py  base.py  coder.py  reviewer.py  theme_aggregator.py  theme_coder.py
src/thematic_lm/codebook/: __init__.py  codebook.py  embeddings.py
src/thematic_lm/evaluation/: __init__.py  credibility.py  transferability.py
src/thematic_lm/pipeline/: __init__.py  pipeline.py
tests/: __init__.py  conftest.py  test_aggregator_agent.py  test_behavioral.py  test_codebook.py  test_codebook_identity.py  test_coder_agent.py  test_credibility_evaluation.py  test_dependability_evaluation.py  test_embeddings.py  test_hermeneutics.py  test_hitl.py  test_identity.py  test_import.py  test_iterative.py  test_loaders.py  test_persona.py  test_pipeline.py  test_research_context.py  test_reviewer_agent.py  test_theme_aggregator_agent.py  test_theme_coder_agent.py  test_transferability_evaluation.py
