[project]
name = "thematic-oss"
version = "0.1.0"
description = "Thematic-LM: A LLM-based Multi-agent System for Large-scale Thematic Analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "openhands-sdk>=1.11.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "rouge-score>=0.1.2",
]

[project.urls]
Source = "https://github.com/OpenHands/thematic-oss"
Homepage = "https://github.com/OpenHands/thematic-oss"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "pyright[nodejs]>=1.1.405",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.10",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["thematic_lm*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# Ruff configuration (same as software-agent-sdk)
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (includes F841: unused-variable)
    "I",    # isort
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
extend-select = ["B006", "B008", "B039", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["thematic_lm"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Pyright configuration
[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
useLibraryCodeForTypes = true
typeCheckingMode = "standard"
